feat(index.html): add scoreboard and messages

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
       >https://git.qontu.com/egarcia/KiwiBird</a
     > -->
     <h5>The awesome KIWI bird</h5>
+    <div id="scoreboard" style="width: 1000px; text-align: right; font-size: 50px; color: #fff;">
+      0
+    </div>
+    <div id="messages"></div>
   </body>
   <script src="bundle.js"></script>
 </html>
