feat(index.html): set easter egg in h2

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       </span>
     </div>
     <div class="canvas-container" id="canvasContainer"></div>
-    <div id="messages"></div>
+    <h2 id="messages"></h2>
   </body>
   <script src="bundle.js"></script>
 </html>
