--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.min.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- build:js scripts/combined.js -->
